--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,227 @@
-.App {
+.cover-page {
+  text-align: center;
+  background-color: #000;
+  height: 100vh;
+}
+
+.cover-svg {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.cover-text {
+  color: #fff;
+  font-size: 16.3rem;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 13.6rem;
+  letter-spacing: 0.25rem;
+  text-transform: uppercase;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  align-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  cursor: default;
+}
+
+img.phone-image {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-text {
+  z-index: 1;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-links {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  z-index: 1;
+}
+
+.nav-links li {
+  color: #fff;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 800;
+  margin: 0.75rem;
+  letter-spacing: 0.025rem;
+  text-transform: uppercase;
+  list-style: none;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+img.eye,
+img.logo {
+  height: fit-content;
+  margin: 20px;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.cash-app-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.download-section {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px;
+}
+
+.app-store a,
+.google-play a {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app-store img,
+.google-play img {
+  padding-right: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-store {
+  display: flex;
+  margin-right: 3rem;
+  border-radius: 7px;
+  border: 1px solid #fff;
+  background: #000;
+  padding: 10px 25px;
+  align-items: center;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.dowload-text {
+  white-space: nowrap;
+  font-size: 0.8rem;
+  font-style: normal;
+  font-weight: 800;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+
+.google-play {
+  display: flex;
+  border-radius: 7px;
+  border: 1px solid #fff;
+  background: #000;
+  padding: 10px 25px;
+  align-items: center;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.down-chevron {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.down-chevron img {
+  z-index: 1;
+  cursor: pointer;
+}
+
+.legal-text {
+  width: 20.5rem;
+  color: #b6b6b6;
+  font-family: Mulish;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 13px;
+  text-align: left;
+  padding: 10px;
+}
+
+.social-media {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.social-media-icons {
+  padding: 10px;
+}
+
+.social-media-icons img {
+  margin: 10px;
+}
+
+.backgound-images {
+  position: absolute;
+  height: -webkit-fill-available;
+  width: 100%;
+  margin-top: 70px;
+}
+
+.backgound-images div {
+  margin: 5px;
+  flex-basis: 49%;
+  flex-grow: 1;
+  align-content: space-between;
+}
+
+.background-circles {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  align-items: flex-end;
+}
+
+.background-cube, .background-stairs {
+  text-align: initial;
+}
+
+.background-cubes, .background-pillar {
+  text-align: end;
+}
+
+.background-cube img, .background-stairs img {
+  padding-left: 3rem;
+}
+
+.background-cubes img, .background-pillar img {
+  padding-right: 3rem;
+}
+
+.twitch, .twitter, .instagram {
+  z-index: 1;
+  cursor: pointer;
+  position: relative;
 }
